changed an email adress for portfolio

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
   
     <div class="link">
-      <a class="myInfo" href="https://yanaos-portfolio.glitch.me/" target="_blank">Developed by <span class="myName">YanaOS</span></a>
+      <a class="myInfo" href="https://yanaos-portfolio.netlify.app/" target="_blank">Developed by <span class="myName">YanaOS</span></a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>    
